apps/infra/redis/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis
  namespace: redis
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`redis.internal.crussell.io`)
      services:
        - name: redis-master
          port: 6379
  tls:
    passthrough: true
